feat: Split up contract testing in individual tests

--- a/.github/workflows/scheduled-test.yaml
+++ b/.github/workflows/scheduled-test.yaml
@@ -1,10 +1,14 @@
 name: Scheduled Contract Testing
 
 on:
-  schedule:
-    - cron: "2 1 * * *" # Every day at 01:02
+  workflow_call:
+    inputs:
+      test-target:
+        type: string
+        required: true
+        default: '*'
 
-  workflow_dispatch:
+  workflow_dispatch: # Manual trigger
 
 jobs:
   contract-testing:
@@ -14,11 +18,11 @@ jobs:
       - uses: jdx/mise-action@v2.0.2
         with:
           version: 2025.8.21
-      - run: mise run test:schemathesis:* --phases examples
+      - run: mise run test:schemathesis:${{ inputs.test-target }} --phases examples
 
       - name: Upload test results
         uses: actions/upload-artifact@v4.6.2
         if: always()
         with:
-          name: schemathesis-report
+          name: schemathesis-report-${{ inputs.test-target }}
           path: openapi/**/schemathesis-report/*
